<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/computerLife1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/heart2" />

        <ImageView
            android:id="@+id/computerLife2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/heart2" />

        <ImageView
            android:id="@+id/computerLife3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/heart2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gep" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jatekos" />

        <ImageView
            android:id="@+id/playerLife1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/heart2" />

        <ImageView
            android:id="@+id/playerLife2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/heart2" />

        <ImageView
            android:id="@+id/playerLife3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/heart2" />
    </LinearLayout>

    <TextView
        android:id="@+id/tiesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_ntetlenek_sz_ma_0" />

    <ImageView
        android:id="@+id/computerChoiceImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_g_p_v_laszt_sa" />

    <ImageView
        android:id="@+id/playerChoiceImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_te_v_laszt_sod" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/rockButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/rock"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/paperButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/paper"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/scissorsButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/scissors"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

</LinearLayout>
